# RetoSemanal

./: Cargo.toml
src/: api_call.rs  fizz_buzz.rs  get_params.rs  guess_word.rs  hacker_language.rs  lib.rs  main.rs  octal_hexadecimal.rs  password_generator.rs  prime_fibonacci_even.rs  pseudo_random.rs  reto00.rs  reto01.rs  rock_paper_scissors.rs  stairs.rs  tennis_match.rs  text_analysis.rs  text_type.rs  twin_prime.rs
